--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,10 @@
 
 /* Screens */
 @import 'screens/login.css';
+@import 'screens/friends.css';
 
 body {
   font-family: 'Open Sans', sans-serif;
+  color: #2e363e;
   /* height: 1000vh; */
 }
