--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -9,7 +9,10 @@
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .user-component__avatar {
@@ -43,4 +46,9 @@
 
 .user-component__title--not-bold {
   font-weight: 400;
+}
+
+.user-component__time {
+  display: block;
+  margin-bottom: 5px;
 }
