--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
   color: #2e363e;
-  /* height: 1000vh; */
+  height: 200vh;
 }
 
 .main-screen {
