--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,3 +1,20 @@
 #chat-screen {
   background-color: #abc1d1;
+  height: 1000vh;
+}
+
+#chat-screen .status-bar {
+  z-index: 1;
+}
+
+#chat-screen .alt-header {
+  top: 0px;
+  position: fixed;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: #abc1d1;
+}
+
+.main-chat {
+  margin-top: 150px;
 }
