--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -16,5 +16,16 @@
 }
 
 .main-chat {
-  margin-top: 150px;
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.chat__timestamp {
+  color: white;
+  font-size: 14px;
+  background-color: #92a4b2;
+  padding: 15px;
+  border-radius: 25px;
 }
