--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -113,26 +113,28 @@
 }
 
 .reply input {
-  height: 30px;
+  /* height: 30px; */
+  padding: 10px 14px;
   width: 100%;
   border: var(--main-border);
   border-radius: 20px;
+  box-sizing: border-box;
 }
 
-.reply input::placeholder {
+/* .reply input::placeholder {
   padding: 10px;
-}
+} */
 
 .reply__column:last-child > i,
 .reply__column:last-child button {
   position: absolute;
-  right: -3px;
-  top: 2px;
+  right: 4px;
+  top: 4px;
 }
 
 .reply__column:last-child > i {
-  right: 40px;
-  top: 16px;
+  right: 45px;
+  top: 18px;
 }
 
 .reply__column button {
